# motion

./: .gitignore  pyproject.toml  xx
.docker/: docker-compose.build.yml
docker/: docker-compose-echo.yml  docker-compose-isaac.yml  docker-compose.build.yml  docker-compose.runner.data.yml  docker-compose.runner.echo.yml  docker-compose.runner.isaac.yml  docker-compose.runner.relay.yml  docker-compose.yml
react/: package-lock.json
server/: bounce.py  channel.py  count.py  counter.py  echo.py  extension.py  interface.py  lifespan.py  live.py  message.py  model.py  node.py  relay.py  remote.py  requirements.txt  rtsp.py  runner.py  server.py  storage.py  task.py  work.py  worker.py
server/extension/config/: extension.toml
server/extension/motion/: extension.py
server/isaac/config/: extension.toml
server/isaac/motion/: extension.py  kinematics.py
server/ros/: package.xml  setup.py
server/ros/ros/: motion.py
server/ros/src/motion/: package.xml  setup.cfg  setup.py
server/ros/src/motion/motion/: motion.py
src/motion/: __init__.py  assembly.py  client.py  docker-compose.yml  motionclass.py  scene.py  session.py  tool.py
tests/: conftest.py  docker-compose.yml  home.spec.ts  package-lock.json  package.json  playwright.config.ts  test_browser.py  test_client.py  test_live.py  test_ros.py  test_runner.py  test_scene.py  test_server.py  test_session.py  test_storage.py  test_tool.py
tools/: server.sh
